--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,11 @@
   <title>App - Intro Star Wars</title>
 </head>
 <body>
+
+    <section class="intro intro_texto">
+        A Long Time Ago, in a galaxy far,<br> far away ...  
+      </section>
+
   <script src="js/intro.js"></script>
 </body>
 </html>
