--- a/src/index.html
+++ b/src/index.html
@@ -1,22 +1,49 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
+  <title>Intro - Star Wars</title>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta content="width=device-width, initial-scale=1, maximum-scale=1" name="viewport" />
 
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">  
-  <link rel="stylesheet" href="css/style.css">
-  
-  <title>App - Intro Star Wars</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+    integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css"
+    integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+  <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
+  <div class="botao" onclick="play()">Play</div>
+  <header></header>
 
-    <section class="intro intro_texto">
-        A Long Time Ago, in a galaxy far,<br> far away ...  
-      </section>
+  <section class="intro intro_texto">
+    A Long Time Ago, in a galaxy far,<br> far away ...
+  </section>
 
+  <section class="paragrafos">
+    <div class="historia historia_texto">
+      <p class="text-center">Star Wars Episódio XI</p>
+      <p class="text-center">Fernanda and the Quest for the Lightsaber</p>
+      <br>
+      <p class="text-center">
+        These are very difficult times!
+        That's why Fernanda Domenicali needs to find the lightsaber
+        so you can get programming powers
+        like no other person in the galaxy.
+        And with that, she begins her quest across the galaxy.
+      </p>
+      <p class="text-center">
+        During your search,
+        Fernanda comes across a planet called Tatooine.
+        And it is precisely there that she will start all her training
+        to get your powers again.
+      </p>
+    </div>
+  </section>
+
+  <audio src="song/starwars.mp3" id="som"></audio>
+
+  <footer></footer>
   <script src="js/intro.js"></script>
 </body>
 </html>
