--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
   <div class="botao" onclick="play()">Play</div>
-  <header></header>
+  <canvas id="snow"></canvas>
 
   <section class="intro intro_texto">
     A Long Time Ago, in a galaxy far,<br> far away ...
